objects/CPQ_Attribute_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CPQ Attribute Settings</description>
    <fields>
        <fullName>Attribute_Group_Ext_ID__c</fullName>
        <label>Attribute Group Ext ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Details__c</fullName>
        <label>Field Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CPQ Attribute Settings</label>
</CustomObject>